--- a/auth/package.json
+++ b/auth/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^5.9.22",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.7.30"
   }
 }
