--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -15,4 +15,12 @@ build:
       sync:
         manual:
           - src: 'src/**/*.ts'
-            dest: .    
+            dest: .
+    - image: pankajsingh121/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '**/*.js'
+            dest: .
