--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -39,4 +39,13 @@ build:
       sync:
         manual:
           - src: 'src/**/*.ts'
-            dest: .        
+            dest: .
+    - image: pankajsingh121/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
+   
