--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -48,4 +48,11 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-   
+    - image: pankajsingh121/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
